packages/grammar/test/corpus/content.txt
==================
content with section header
==================

2026-01-05T18:11 create lore "Entry with content"
  type: "fact"
  subject: ^acme

  # Description
  This is the content paragraph.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
multi-line content under section
==================

2026-01-05T18:11 create lore "Entry with multi-line content"
  type: "fact"

  # Details
  First line of content.
  Second line of content.
  Third line continues.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
content with multiple sections
==================

2026-01-05T18:11 create opinion "Opinion with multiple sections"
  confidence: "high"

  # Claim
  This is the claim.

  # Reasoning
  Here is the reasoning.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
content without metadata
==================

2026-01-05T18:11 create journal "Journal entry"

  # Thoughts
  Just some thoughts I wanted to write down.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
content at EOF without trailing newline
==================

2026-01-05T18:11 create lore "Entry at EOF"
  type: "fact"

  # Notes
  First line.
  Last line without newline.
---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
markdown header at EOF without trailing newline
==================

2026-01-05T18:11 create opinion "Opinion at EOF"
  confidence: "high"

  # Final Section
---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))))))

==================
content directly after header (no blank line)
==================

2026-01-05T18:11 create journal "Direct content"
  # Summary
  No blank line needed before content section.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
content directly after metadata (no blank line)
==================

2026-01-05T18:11 create lore "Direct after metadata"
  type: "fact"
  # Description
  Section starts right after metadata.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))
