packages/grammar/test/corpus/errors.txt
==================
unclosed title quote (recovers at newline)
==================

2026-01-05T18:11Z create lore "Hello

---

(source_file
  (entry
    (data_entry
      (timestamp
        (timestamp_date)
        (timestamp_t)
        (timestamp_time)
        (timestamp_tz))
      (data_directive)
      (identifier)
      (title))))

==================
unclosed title quote with content (recovers at newline)
==================


2026-01-05T18:11Z create lore "Hello
  type: "fact"

  # Section
  yes"

---

(source_file
  (entry
    (data_entry
      (timestamp
        (timestamp_date)
        (timestamp_t)
        (timestamp_time)
        (timestamp_tz))
      (data_directive)
      (identifier)
      (title)
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
timestamp without timezone (validated in AST builder)
==================

2026-01-05T18:11 create lore "Entry without timezone"
  type: "fact"

---

(source_file
  (entry
    (data_entry
      (timestamp
        (timestamp_date)
        (timestamp_t)
        (timestamp_time))
      (data_directive)
      (identifier)
      (title)
      (metadata
        (key)
        (value
          (quoted_value))))))

==================
timestamp without timezone in schema entry
==================

2026-01-05T10:00 define-entity test "Test entity"
  # Metadata
  name: string

  # Sections
  Summary

---

(source_file
  (entry
    (schema_entry
      (timestamp
        (timestamp_date)
        (timestamp_t)
        (timestamp_time))
      (schema_directive)
      (identifier)
      (title)
      (metadata_block
        (field_definition
          (field_name)
          (type_expression
            (primitive_type))))
      (sections_block
        (section_definition
          (section_name))))))

==================
invalid link
==================


2026-01-05T18:11Z create lore "Hello"
  related: ^2026-01-05T17:11Z

---

(source_file
  (entry
    (data_entry
      (timestamp
        (timestamp_date)
        (timestamp_t)
        (timestamp_time)
        (timestamp_tz))
      (data_directive)
      (identifier)
      (title)))
  (ERROR
    (key)
    (ERROR
      (link))
    (UNEXPECTED 'Z')
    (timestamp_tz)))

==================
date range without end
==================


2026-01-05T18:11Z create lore "Hello"
  related: 2024 ~ 

---

(source_file
  (entry
    (data_entry
      (timestamp
        (timestamp_date)
        (timestamp_t)
        (timestamp_time)
        (timestamp_tz))
      (data_directive)
      (identifier)
      (title)))
  (ERROR
    (key)
    (UNEXPECTED '\n')))
