packages/grammar/test/corpus/metadata.txt
==================
single metadata
==================

2026-01-05T18:11 create lore "Entry with metadata"
  type: fact

---

(source_file
  (entry
    (header
      (timestamp)
      (directive)
      (entity)
      (title))
    (metadata
      (key)
      (value))))

==================
multiple metadata
==================

2026-01-05T18:11 create lore "Entry with multiple metadata"
  type: fact
  subject: acme

---

(source_file
  (entry
    (header
      (timestamp)
      (directive)
      (entity)
      (title))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value))))

==================
metadata with quoted value
==================

2026-01-05T18:11 create opinion "Opinion with source" #work
  confidence: high
  source: "Technical documentation"

---

(source_file
  (entry
    (header
      (timestamp)
      (directive)
      (entity)
      (title)
      (tag))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value))))

==================
metadata with reference value
==================

2026-01-05T18:11 create lore "Entry with reference"
  type: fact
  subject: acme
  related: ^other-entry

---

(source_file
  (entry
    (header
      (timestamp)
      (directive)
      (entity)
      (title))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value
        (link)))))

==================
metadata with date range
==================

2026-01-05T18:11 create lore "Entry with date range"
  type: fact
  subject: acme
  date: 2022 ~ 2024

---

(source_file
  (entry
    (header
      (timestamp)
      (directive)
      (entity)
      (title))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value))))

==================
metadata with hyphenated key
==================

2026-01-05T18:11 create reference "Reference entry"
  ref-type: article
  status: read

---

(source_file
  (entry
    (header
      (timestamp)
      (directive)
      (entity)
      (title))
    (metadata
      (key)
      (value))
    (metadata
      (key)
      (value))))
